--- a/netlify.toml
+++ b/netlify.toml
@@ -4,8 +4,16 @@
   functions = "dist/server"
 
 [[redirects]]
-  from = "/trend.json"
-  to = "/.netlify/functions/trend"
+  from = "/trendTech.json"
+  to = "/.netlify/functions/trendTech"
+
+[[redirects]]
+  from = "/trendIdea.json"
+  to = "/.netlify/functions/trendIdea"
+
+[[redirects]]
+  from = "/trendBook.json"
+  to = "/.netlify/functions/trendBook"
 
 [[redirects]]
   from = "/trend"
